Fixed spacing on right

--- a/email-template-stylesheet.css
+++ b/email-template-stylesheet.css
@@ -153,7 +153,7 @@ p {
 h1 { 
     font-family: 'Times New Roman', Times, serif;
     font-size: 3rem;
-    color: darkorange;
+    color: rgb(218, 151, 21);
 }
 
 h2 {
@@ -248,7 +248,7 @@ h5 {
 #container-2 {
     padding-top: 2rem;
     padding-bottom: 2rem;
-    background-color: darkorange;
+    background-color: rgb(218, 151, 21);
 }
 
 #container-2 h4 {
@@ -303,7 +303,7 @@ h5 {
     text-align: center;
     padding-top: 2rem;
     padding-bottom: 2rem;
-    background-color: darkorange;
+    background-color: rgb(218, 151, 21);
 }
 
 #container-3 h5 {
@@ -331,7 +331,7 @@ h5 {
 }
 
 #container-4 {
-    background-color: darkorange;
+    background-color: rgb(218, 151, 21);
     padding-bottom: 2rem;
 }
 
@@ -399,7 +399,7 @@ h5 {
     padding-bottom: 5rem;
     width: 80%;
     margin-left: 10%;
-    background-color: darkorange;
+    background-color: rgb(218, 151, 21);
 }
 
 #middle-footer div {
@@ -447,6 +447,7 @@ h5 {
 }
 
 #sm-icons {
+    width: 20%;
     position: relative;
     top: 3rem;
     margin-left: 43%;
